--- a/11.html
+++ b/11.html
@@ -150,9 +150,6 @@ for the JavaScript code in this tag.
 <li><a href="#sec-1-4">Woods</a></li>
 <li><a href="#sec-1-5">Metals</a></li>
 <li><a href="#sec-1-6">Plastics</a></li>
-<li><a href="#sec-1-7">Manmade Boards</a></li>
-<li><a href="#sec-1-8">Smart Materials</a></li>
-<li><a href="#sec-1-9">Comparative Testing</a></li>
 </ul>
 </li>
 <li><a href="#sec-2">2. Recap</a>
@@ -256,6 +253,14 @@ for the JavaScript code in this tag.
 
 <li>Temporary fabrication techniques suitable for wood, metal and plastic. A minimum of three mechanical methods
 </li>
+<li>Redistribution /Deformation
+<ul class="org-ul">
+<li>Redistribution methods are where a material is melted or formed into a new shape, eliminating waste. Injection moulding, for instance.
+</li>
+<li>Deformation is where a material's shape is changed by being manipulated. This could be a piece of metal being beaten into shape (e.g. a horsehoe), sheet steel being rolled through the 3-in-1 machine or aluminium sheet being folded by being clamped in a vice and struck. 
+</li>
+</ul>
+</li>
 </ul>
 </div>
 </div>
@@ -307,88 +312,11 @@ for the JavaScript code in this tag.
 </li>
 </ul>
 </li>
-
 <li>Chemical methods
 <ul class="org-ul">
-<li>Plastic cement (Tensol) can be used to bond two plastics. The joints need to be close-fitting, and free from grease/residue. The two surfaces are clamped together, and the solvent is applied sparingly. The glue is sucked into the joint through a capillary action. The bond will be better if the surface areas of the joins are increased (e.g. through the use of finger joints).
+<li>Plastic cement <i>(Tensol)</i> can be used to bond two plastics. The joints need to be close-fitting, and free from grease/residue. The two surfaces are clamped together, and the solvent is applied sparingly. The glue is sucked into the joint through a capillary action. The bond will be better if the surface areas of the joins are increased (e.g. through the use of finger joints).
 </li>
 </ul>
-</li>
-
-<li>Redistribution /Deformation
-</li>
-</ul>
-<p>
-• a minimum of three redistribution/deformation
-</p>
-
-<p>
-Processes suitable for metals
-• a minimum of three redistribution/deformation processes suitable for plastics
-• a minimum of two redistribution/deformation processes suitable for woods
-</p>
-</div>
-</div>
-
-<div id="outline-container-sec-1-7" class="outline-3 learn">
-<h3 id="sec-1-7">Manmade Boards</h3>
-<div class="outline-text-3" id="text-1-7">
-<ul class="org-ul">
-<li><a href="http://en.wikipedia.org/wiki/Engineered_wood">Manmade boards</a> are created from other woods, to give specific properties (and are usually relatively cheap compared to hard and softwoods).
-</li>
-<li><b>Blockboard</b> is built up with a core of softwood strips bonded together with adhesive and covered with a sheet of plywood on either side. Used as a building material and for furniture manufacture including fitted kitchens / bedrooms.
-</li>
-<li><a href="http://en.wikipedia.org/wiki/Particle_board"><b>Chipboard</b></a> is made up of small chips of wood bonded together with resin and formed into sheets by compression. It is not as strong as plywood and block board but it is not expensive. Chipboard is often covered with a plastic laminate or wood veneer and used in furniture. Chipboard could contain partials of metal, grit and any other rubbish that gets taken up into a tree whilst growing, is also the most unstable board because of air pockets, will swell up to twice its thickness when damp.         
-</li>
-<li><b>Hardboard</b> is made from wood fibres that have been pulped. The pulp is put under pressure until the fibres bond to produce a tough board that is smooth on one side and rough on the other. It is not as strong as the other boards. When supplied, it is smooth one side and rough the other, because of the drying process and is flexible, generally buckles at the first sign of dampness in the air, used mainly for backs of cupboards.
-</li>
-<li><a href="http://en.wikipedia.org/wiki/Medium-density_fibreboard"><b>MDF</b></a> (Medium Density Fibreboard) is quality board, which is relatively cheap. This board is composed of fine wood dust and resin pressed into a board. MDF is the most stable manmade board, and can have a ply or laminate finish added to it to make its finish more aesthetically pleasing. Low Density and High density re also available, as it water resistant MDF (which is usually green in colour). MDF can be worked, shaped and machined easily. Paint can be applied to it without the need for an undercoat or primer. Used in the building and furniture trades, as well as in schools.
-</li>
-<li><a href="http://en.wikipedia.org/wiki/Plywood"><b>Plywood</b></a> is made from veneers (thin plies) of timber with each grain layer being at right angles to each other and bonded together by resin and pressure. A number of grades are available, designed to suit a variety of situations, such as Marine plywood that is moisture resistant (although it will still warp) or weatherproof plywood. Ply is the only board that uses layers of pure wood. If the grains are laid parallel with each other it becomes flexible along the grain; if laid at right angles it becomes more rigid. 
-</li>
-<li>All boards come in standard thicknesses of 3, 6, 9, 12, 15, 18 &amp; 25mm.
-</li>
-</ul>
-</div>
-</div>
-<div id="outline-container-sec-1-8" class="outline-3 learn">
-<h3 id="sec-1-8">Smart Materials</h3>
-<div class="outline-text-3" id="text-1-8">
-<ul class="org-ul">
-<li>Advances in technology have yielded cutting edge, Smart materials, which have been created to provide specific properties. 
-</li>
-<li><a href="http://en.wikipedia.org/wiki/Shape-memory_alloy"><b>Smart wire</b></a> is sometimes called ‘Nitinol’, as it is a composed of nickel and titanium. It can be folded to form complex shapes quite easily and it conducts electricity, but is very expensive when compared to ordinary steel or even copper wire. However, it has properties that make it very special:
-<ol class="org-ol">
-<li>The wire has a memory - for example, if it is folded to form a shape and then heated above 90°C it returns to its original shape.
-</li>
-<li>The material can also be ‘programmed’ to remember a shape. This can be achieved by folding the wire to a particular shape and clamping it in position. The wire is then heated for approximately five minutes at precisely 150° or pass an electric current through the wire. If the wire is now folded into another shape and then placed in hot water it returns to the original ‘programmed’ shape. 
-</li>
-</ol>
-</li>
-<li><b>Muscle wire</b> is also a nickel and titanium alloy. At room temperature it can be stretched by a small force. However, when a small current is passed through the wire it returns to a much harder form and to its original length with a reasonable force. When in use a muscle wire can be stretched up to 8 percent of its length and still recover. However, this can only be done a few times until it breaks or stops returning to its original length. Its life cycle can be extended dramatically if it is stretched to between 3 to 5 percent of its overall length. Within this range it will go through the stretching and return cycle millions of times.
-</li>
-<li><a href="http://en.wikipedia.org/wiki/Polycaprolactone"><b>Polymorph</b></a> is a thermoplastic material that can be shaped and reshaped any number of times. it is normally supplied as granules that look like small plastic beads. In the classroom it can be heated in hot water and when it reaches 62 degrees centigrade the granules form a mass of ‘clear’ material. When removed from the hot water it can be shaped into almost any form and on cooling it becomes as solid as a material such as nylon. Although expensive, polymorph is suitable for 3D modeling as it can be shaped by hand or pressed into a shape through the use of a mold.
-</li>
-<li><a href="http://en.wikipedia.org/wiki/Quantum_tunnelling_composite"><b>Quantum Tunneling Composite</b></a> (QTC) is available as small “pills”. This material provides increasing levels of conductivity as pressure is applied to it, making it useful for dimmer switches, pressure sensors and for integrating into clothing.
-</li>
-</ul>
-</div>
-</div>
-<div id="outline-container-sec-1-9" class="outline-3 learn">
-<h3 id="sec-1-9">Comparative Testing</h3>
-<div class="outline-text-3" id="text-1-9">
-<ul class="org-ul">
-<li>When selecting materials for a particular task, it may be necessary to test different samples to ensure that they will need the product specification (e.g. for weight, cost, durability, etc). 
-</li>
-<li><a href="http://en.wikipedia.org/wiki/Ultimate_tensile_strength"><b>Tensile strength</b></a> (how much something can be stretched before it breaks) can be tested in a workshop by clamping a sample, then hanging increasing amounts of weight from it until the sample breaks. Some materials will start to stretch first, whereas others hold their shape and break suddenly. 
-</li>
-<li><a href="http://en.wikipedia.org/wiki/Compressive_strength"><b>Compressive strength</b></a> (resistance to deformation by a crushing load) can be measured by finding the amount of weight required to deform a material. Some materials rupture when the load exceeds their ultimate compressive strength (e.g. Concrete), whereas other materials (e.g. Wood and some plastics) deform. With non-rupturing materials, measurements can be taken of how much force is required to deform samples by 1%, 5%, 10%, etc. 
-</li>
-<li><a href="http://en.wikipedia.org/wiki/Hardness"><b>Hardness</b></a> can be measured by taking samples of the different materials that are to be tested which have a sharp corner, and seeing which sample can scratch which material. By comparing all the materials, it will be possible to rank all the samples to establish which is the hardest. 
-</li>
-<li><a href="http://en.wikipedia.org/wiki/Toughness"><b>Toughness</b></a> can be tested by placing identical-sized samples of materials in a vice, then subjecting each one to an identical impact (e.g. a hammer blow set up by a jig, and dropped from the same angle each time), and measuring the angle the material is bent to. 
-</li>
-<li><a href="http://en.wikipedia.org/wiki/Fusibility"><b>Fusibility</b></a> can be measured by heating samples until they melt, and recording the temperature at which this occurs.
 </li>
 </ul>
 </div>
@@ -402,53 +330,43 @@ Processes suitable for metals
 <h3 id="sec-2-1">Past Paper Questions</h3>
 <div class="outline-text-3" id="text-2-1">
 <ul class="org-ul">
-<li><b>June 2009, SCT1. Q4.</b> (a) With reference to the working properties of each material and any other factors which you consider relevant, explain the suitability of the following materials for each of the products. 
+<li><b>Specimen Paper, Q3.</b> The plastic casing for an electronics project could be manufactured by either: -
 <ul class="org-ul">
-<li>Wardrobe made from pine
-<ul class="org-ul">
-<li>Knife blade made from stainless steel
+<li>one-off production,  
+</li>
+<li>batch production, or  
+</li>
+<li>mass production.  
 </li>
 </ul>
 </li>
-<li>Kitchen worktop made from plastic coated chipboard
+
+<li>For each of these processes, state a suitable production process which could be used to manufacture the casing and give one advantage of this type of manufacturing process. 
+</li>
+
+<li>One-off production
 <ul class="org-ul">
-<li>Mobile phone casing made from ABS plastic <i>(4× 5 marks)</i>
+<li>Production Process: <i>(1 mark)</i>
+</li>
+<li>Advantage: /(1 mark) /
 </li>
 </ul>
 </li>
+
+<li>Batch production
+<ul class="org-ul">
+<li>Production Process: <i>(1 mark)</i>
+</li>
+<li>Advantage: <i>(1 mark)</i>
+</li>
 </ul>
 </li>
-<li>(b) Discuss the advantages and disadvantages of using CAD/CAM instead of jigs or templates in manufacturing situations. <i>(8 marks)</i>
-</li>
-</ul>
 
-
+<li>Mass production
 <ul class="org-ul">
-<li><b>Specimen paper, Q1.</b> Explain the following terms and give an example of a specific material for each term: -
-(a) Alloy <i>(2 marks)</i>
-(b) Composite <i>(2 marks)</i>
+<li>Production Process: <i>(1 mark)</i>
 </li>
-</ul>
-
-
-<ul class="org-ul">
-<li><b>June 2009, Q1.</b> Giving an example material, explain the term "non-ferrous metal". <i>(2 marks)</i>
-</li>
-</ul>
-
-
-<ul class="org-ul">
-<li><b>June 2009, Q2.</b> Giving an example material, explain the term "thermoforming plastic". <i>(2 marks)</i>
-</li>
-</ul>
-
-
-<ul class="org-ul">
-<li><b>June 2010, Q1.</b> Explain the following terms and give an example of a specific material for each. 
-<ul class="org-ul">
-<li>(a) An alloy <i>(2 marks)</i>
-</li>
-<li>(b) A hardwood <i>(2 marks)</i>
+<li>Advantage: <i>(1 mark)</i>
 </li>
 </ul>
 </li>
@@ -456,81 +374,22 @@ Processes suitable for metals
 
 
 <ul class="org-ul">
-<li><b>June 2010, Q5.</b> (a) (i) Define the term tensile strength. <i>(2 marks)</i>
-</li>
-<li>(a) (ii) With the aid of annotated sketches describe a suitable test that could be carried out to compare the tensile strength of a range of metals. Your answer should indicate:
-<ul class="org-ul">
-<li>the approximate size of the sample
-</li>
-<li>the method of applying the load
-</li>
-<li>the data that needs to be collected
-</li>
-<li>the method of collecting the data
-</li>
-<li>how the data is analysed. <i>(8 marks)</i>
-</li>
-</ul>
-</li>
-<li>(b) (i) Define the term compressive strength. <i>(2 marks)</i>
-</li>
-<li>(b) (ii) With the aid of annotated sketches describe a suitable test that could be carried out to compare the compressive strength of a range of woods. Your answer should indicate:
-<ul class="org-ul">
-<li>the approximate size of the sample
-</li>
-<li>the method of applying the load
-</li>
-<li>the data that needs to be collected
-</li>
-<li>the method of collecting the data
-</li>
-<li>how the data is analysed. <i>(8 marks)</i>
-</li>
-</ul>
+<li><b>2009, Q7(b).</b> Identify two health and safety risks when producing and soldering components onto printed circuit boards and state how these risks may be reduced. <i>(4 marks)</i>
 </li>
 </ul>
 
 
 <ul class="org-ul">
-<li><b>June 2011, Q3.</b> With the aid of an annotated sketch, describe a method of using heat to permanently join two pieces of metal together. <i>(4 marks)</i>
+<li><b>2011, Q3.</b> With the aid of an annotated sketch, describe a method of using heat to permanently join two pieces of metal together. <i>(4 marks)</i>
 </li>
 </ul>
 
 
 <ul class="org-ul">
-<li><b>June 2012, Q1.</b> (a) Name a man-made board that uses lamination for strength. <i>(1 mark)</i>
-<ul class="org-ul">
-<li>(b) Name an alloy. <i>(1 mark)</i>
-</li>
-<li>(c) List the two main materials that make up the alloy you have named above. <i>(2 marks)</i>
-</li>
-</ul>
+<li><b>2012, Q6(b).</b> Using annotated sketches, describe in detail a suitable manufacturing process for the main body of a plastic bucket. <i>(10 marks)</i>
 </li>
 </ul>
 
-
-<ul class="org-ul">
-<li><b>June 2012, Q3.</b> With the aid of an annotated sketch, describe a method of temporarily joining two pieces of metal together so they can be disassembled for maintenance purposes. <i>(4 marks)</i>
-</li>
-</ul>
-
-
-<ul class="org-ul">
-<li><b>June 2012, Q6.</b> (a) Using annotated sketches, describe a suitable test that could be carried out to compare the resistance to bending forces of a range of plastics. Your answer should indicate:
-<ul class="org-ul">
-<li>the approximate size of the sample
-</li>
-<li>the method of applying the load
-</li>
-<li>the data that needs to be collected
-</li>
-<li>the method of collecting the data
-</li>
-<li>how the data is analysed. <i>(10 marks)</i>
-</li>
-</ul>
-</li>
-</ul>
 
 <p>
 <a href="index.html">Return to homepage</a>
