--- a/examples.html
+++ b/examples.html
@@ -169,13 +169,19 @@ for the JavaScript code in this tag.
 </div>
 </div>
 <div id="outline-container-sec-6" class="outline-2 link-heading">
-<h2 id="sec-6"><a href="./index.html">Return to homepage</a></h2>
+<h2 id="sec-6"><a href="examples/2014.pdf">June 2014 Paper</a></h2>
 <div class="outline-text-2" id="text-6">
 </div>
 </div>
+<div id="outline-container-sec-7" class="outline-2 link-heading">
+<h2 id="sec-7"><a href="examples/2015.pdf">June 2015 Paper</a></h2>
+<div class="outline-text-2" id="text-7">
 </div>
-<div id="postamble" class="status">
-<p class="validation"></p>
+</div>
+<div id="outline-container-sec-8" class="outline-2 link-heading">
+<h2 id="sec-8"><a href="./index.html">Return to homepage</a></h2>
+<div class="outline-text-2" id="text-8">
+</div>
 </div>
 </body>
 </html>
