SAB updates lesson 11

--- a/11.html
+++ b/11.html
@@ -175,8 +175,21 @@ for the JavaScript code in this tag.
 <ul class="org-ul">
 <li>There are many ways to go about fabricating an electromechanical system. It is useful to know a variety of methods for working with resistant materials. 
 </li>
+<li>The different techniques that can be employed to make a new part or product can be broadly broken up as:
+<ul class="org-ul">
+<li><b>Addition/Fabrication.</b> Material/parts added. E.g. 3D printing complex forms with molten ABS, gluing one piece of wood to another or bolting one engine part to another.
+</li>
+<li><b>Wastage.</b> Material is removed. E.g. Drilling a hole in a block of steel or filing a corner off a wooden block. 
+</li>
+<li><b>Redistribution</b> Changing the shape of a material. E.g. Injection moulding to make toy parts, or melting pewter in a crucible and pouring it into a mould (casting). 
+</li>
+<li><a href="https://www.doitpoms.ac.uk/tlplib/metal-forming-2/printall.php"><b>Deformation.</b></a> Changing a material's shape. E.g. Vacuum forming, using a pipe-bender to create a right-angle in a copper gas pipe or beating a horse-shoe into shape with a hammer. 
+</li>
+</ul>
+</li>
 </ul>
 </div>
+
 <div id="outline-container-sec-1-1" class="outline-3 learn">
 <h3 id="sec-1-1">Industrial Processes</h3>
 <div class="outline-text-3" id="text-1-1">
@@ -222,6 +235,8 @@ for the JavaScript code in this tag.
 </li>
 <li>A circular saw can be used to quickly cut through or to cut grooves in straight lines at high speed.
 </li>
+<li>A belt-sander can be used to remove rough edges, smoothing out the workpiece.
+</li>
 </ol>
 </li>
 
@@ -230,6 +245,8 @@ for the JavaScript code in this tag.
 <li>A CNC router can be programmed (using 3d software) to carve the desired shape from a block of wood. The wood to be cut needs to be firmly secured to the bed of the machine, to ensure the work piece isn’t dislodged by the high-speed cutting bits. 
 </li>
 <li>A laser-cutter cuts shapes from sheet material using a tightly focused beam to cut through (and etch) thermoplastic materials. A design is created on a CAD package on the computer, then sent to the machine where it is cut. Extractor is turned on throughout and the user needs to avoid eye contact with the beam. 
+</li>
+<li>A CNC lathe can cut into lengths of wood and metal to produce shapes as required. Often used for table legs, or for precisely maching parts for engines and machinery. 
 </li>
 </ol>
 </li>
@@ -245,12 +262,10 @@ for the JavaScript code in this tag.
 <ul class="org-ul">
 <li>Machine screws (bolts) can be used with washers (to spread the load and help prevent breakage). Two surfaces are drilled slowly, then bolted. If requried, nylon-lined (nyloc) nuts can be used, which won't slip loose over time. 
 </li>
-
 <li>A CNC milling machine or router can be used in a similar way to a laser cutter, but to use a physical bit to cut away at the surface of the material. Careful work with a small chisel and hammer can be used to square off any corners where needed.
 </li>
 </ul>
 </li>
-
 <li>Temporary fabrication techniques suitable for wood, metal and plastic. A minimum of three mechanical methods
 </li>
 <li>Redistribution /Deformation
@@ -330,6 +345,8 @@ for the JavaScript code in this tag.
 <h3 id="sec-2-1">Past Paper Questions</h3>
 <div class="outline-text-3" id="text-2-1">
 <ul class="org-ul">
+<li>Pratice: Identify 
+</li>
 <li><b>Specimen Paper, Q3.</b> The plastic casing for an electronics project could be manufactured by either: -
 <ul class="org-ul">
 <li>one-off production,  
@@ -348,7 +365,7 @@ for the JavaScript code in this tag.
 <ul class="org-ul">
 <li>Production Process: <i>(1 mark)</i>
 </li>
-<li>Advantage: /(1 mark) /
+<li>Advantage: <i>(1 mark)</i>
 </li>
 </ul>
 </li>
@@ -399,7 +416,7 @@ for the JavaScript code in this tag.
 </div>
 </div>
 <div id="postamble" class="status">
-<p class="validation"></p>
+<p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
 </html>
